--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1>bike taxi</h1>
     <p>auto</p>
     <p>hello</p>
+    <p>from master</p>
+    <p>from master again</p>
+    <p>from auto again</p>
 </body>
 </html>
